--- a/VisionOpenCV/VisionOpenCV/VisionOpenCV.vcxproj
+++ b/VisionOpenCV/VisionOpenCV/VisionOpenCV.vcxproj
@@ -79,10 +79,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ImageHandler.cpp" />
     <ClCompile Include="MainOpenCV.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="girl.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ImageHandler.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
