--- a/VisionOpenCV/VisionOpenCV/VisionOpenCV.vcxproj
+++ b/VisionOpenCV/VisionOpenCV/VisionOpenCV.vcxproj
@@ -81,12 +81,14 @@
   <ItemGroup>
     <ClCompile Include="ImageHandler.cpp" />
     <ClCompile Include="MainOpenCV.cpp" />
+    <ClCompile Include="MotionCalc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="girl.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImageHandler.h" />
+    <ClInclude Include="MotionCalc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
