--- a/VisionOpenCV/VisionOpenCV/VisionOpenCV.vcxproj.filters
+++ b/VisionOpenCV/VisionOpenCV/VisionOpenCV.vcxproj.filters
@@ -26,16 +26,21 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="girl.jpg">
-      <Filter>资源文件</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="ImageHandler.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="MotionCalc.h">
       <Filter>头文件</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="haarcascade_frontalface_alt.xml">
+      <Filter>资源文件</Filter>
+    </Xml>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="img.jpg">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
