--- a/VisionOpenCV/VisionOpenCV/VisionOpenCV.vcxproj.filters
+++ b/VisionOpenCV/VisionOpenCV/VisionOpenCV.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="MotionCalc.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="serialPort.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageHandler.cpp">
@@ -30,6 +33,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MotionCalc.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="serialPort.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
