--- a/outline/VisionOpenCV/VisionOpenCV.vcxproj
+++ b/outline/VisionOpenCV/VisionOpenCV.vcxproj
@@ -87,7 +87,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>D:\vejoe\opencv\2.4.13\build\include\opencv2;D:\vejoe\opencv\2.4.13\build\include\opencv;D:\vejoe\opencv\2.4.13\build\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Project\vejoe\VisionOpenCV\VisionOpenCV\lib\x64;D:\vejoe\opencv\2.4.13\build\x64\vc11\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>D:\Project\vejoe\VisionOpenCV\Windows\VisionOpenCV\lib\x64;D:\vejoe\opencv\2.4.13\build\x64\vc11\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
